<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".4"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_add" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_title"
                    style="@style/txt_title"
                    android:text="@string/txt_createPlaylist"
                    android:textColor="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_weight=".6"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_sort"
                    style="@style/txt_title"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:drawableRight="@drawable/selector_ic_dropdown"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/grey"
                    android:gravity="center_vertical"
                    android:text="@string/txt_sort_by_nameA2Z"
                    android:textColor="@color/grey" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageViewSearch"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/ic_search"
                    android:tint="@color/grey"
                    app:tint="@color/grey" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:clipToPadding="false"
                android:divider="@null"
                android:paddingBottom="@dimen/_50sdp"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_noData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_100sdp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/txt_title"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/dashed_rect"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/txt_no_songs_msg" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/txt_titleMsg"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/txt_no_songs" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:backgroundTint="@color/colorAccent"
        android:gravity="bottom|end"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@android:color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>