<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.MusicPlayer.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:elevation="0dp"
                app:popupTheme="@style/Theme.MusicPlayer.PopupOverlay">

                <ImageView
                    android:id="@+id/ic_back"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/ic_arrow_back" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/txt_white_style"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/txt_recycleBin"
                    android:textColor="@color/white"
                    android:textFontWeight="600"
                    android:textSize="@dimen/_14sdp" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/divider_color" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_topCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:gravity="right|center_vertical"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/cb_delete"
                            style="@style/checkBoxStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/cb_selector"
                            android:buttonTint="@color/checkbox_tint" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:gravity="right|center_vertical"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txt_done"
                            style="@style/txt_white_style"
                            android:layout_width="match_parent"
                            android:layout_gravity="right|center_vertical"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="right|center_vertical"
                            android:text="@string/txt_DONE"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/_11sdp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_topSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txt_sort"
                            style="@style/txt_white_style"
                            android:layout_width="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:drawableRight="@drawable/selector_ic_dropdown"
                            android:drawablePadding="@dimen/_5sdp"
                            android:gravity="center_vertical"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/txt_sort_by_name"
                            android:textColor="@color/txt_offwhite"
                            android:textSize="@dimen/_11sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:gravity="right|center_vertical"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/imageViewSearch"
                            android:layout_width="@dimen/_35sdp"
                            android:layout_height="@dimen/_35sdp"
                            android:padding="@dimen/_3sdp"
                            android:src="@drawable/ic_search" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_listView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/listView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:clipToPadding="false"
                        android:divider="@null"
                        android:scrollbarStyle="outsideOverlay"
                        android:scrollbars="vertical" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_no_data"
                    style="@style/txt_white_style"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:padding="@dimen/_20sdp"
                    android:singleLine="false"
                    android:text="@string/txt_no_songs_trash"
                    android:textColor="@color/offwhite"
                    android:textFontWeight="400"
                    android:visibility="gone" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_bottomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/colorPrimary"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDelete"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="bottom|center"
                    android:text="@string/txt_delete"
                    android:textAllCaps="false"
                    android:textColor="@color/txt_offwhite"
                    android:textFontWeight="500"
                    android:textSize="@dimen/_10sdp"
                    android:theme="@style/MaterialButton"
                    app:backgroundTint="@color/colorPrimary"
                    app:icon="@drawable/selector_ic_delete"
                    app:iconGravity="top" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRestore"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="bottom|center"
                    android:text="@string/txt_restore"
                    android:textAllCaps="false"
                    android:textColor="@color/txt_offwhite"
                    android:textFontWeight="500"
                    android:textSize="@dimen/_10sdp"
                    android:theme="@style/MaterialButton"
                    app:backgroundTint="@color/colorPrimary"
                    app:icon="@drawable/ic_restore"
                    app:iconGravity="top" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEmptyTrash"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:fontFamily="@font/roboto_regular"
                android:gravity="bottom|center"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/txt_emptyTrash"
                android:textAllCaps="false"
                android:textColor="@color/txt_offwhite"
                android:textFontWeight="500"
                android:textSize="@dimen/_10sdp"
                android:theme="@style/MaterialButton"
                android:visibility="gone"
                app:cornerRadius="@dimen/_20sdp"
                app:icon="@drawable/selector_ic_delete"
                app:iconGravity="start" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>