<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/_5sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewBack"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_arrow_back" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_title"
                style="@style/txt_white_style"
                android:layout_width="match_parent"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/txt_scanFiles"
                android:textColor="@color/white"
                android:textFontWeight="600"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/offwhite" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/layout_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_listTopView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txt_sort"
                            style="@style/txt_white_style"
                            android:layout_width="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:drawableRight="@drawable/selector_ic_dropdown"
                            android:drawablePadding="@dimen/_5sdp"
                            android:fontFamily="@font/roboto_regular"
                            android:gravity="center_vertical"
                            android:text="@string/txt_sort_by_name"
                            android:textColor="@color/txt_offwhite"
                            android:textSize="@dimen/_11sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:gravity="right|center_vertical"
                        android:orientation="horizontal">


                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/imageViewSearch"
                            android:layout_width="@dimen/_35sdp"
                            android:layout_height="@dimen/_35sdp"
                            android:padding="@dimen/_3sdp"
                            android:src="@drawable/ic_search" />

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/cb_delete"
                            style="@style/checkBoxStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/cb_selector"
                            android:buttonTint="@color/checkbox_tint" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_listView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/listView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:clipToPadding="false"
                        android:divider="@null"
                        android:scrollbarStyle="outsideOverlay"
                        android:scrollbars="vertical" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_no_data"
                    style="@style/txt_white_style"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:padding="@dimen/_20sdp"
                    android:singleLine="false"
                    android:text="@string/txt_no_songs_scan"
                    android:textColor="@color/offwhite"
                    android:textFontWeight="400"
                    android:visibility="gone" />

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/colorAccent"
                android:gravity="bottom|end"
                app:srcCompat="@drawable/ic_file_move"
                app:tint="@color/white" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <LinearLayout
            android:id="@+id/layout_scan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <com.radar.widget.RadarScanView
                android:id="@+id/radar_scan"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                app:circleColor="@color/et_background"
                app:circleWidth="1"
                app:innerRingAlpha="94"
                app:innerRingWidth="6"
                app:outerRingAlpha="64"
                app:outerRingWidth="4"
                app:radarColor="@color/et_background"
                app:tailColor="@color/colorAccent" />

        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>